Company page: Alignment for red crosses fix #121

--- a/frontend/company/company.scss
+++ b/frontend/company/company.scss
@@ -133,7 +133,7 @@
 .remove-role{
     position: absolute;
     z-index: 1;
-    top: 12px;
+    top: 6px;
     right: -35px;
     color: #fe6767;
     font-size: 2.5rem;
